Do not evaluate all snippets on every change

--- a/site/clojure-2.html
+++ b/site/clojure-2.html
@@ -9,7 +9,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );</script><!--[if 
    selector: '.eval-clojure',
 	 selector_eval_js: '.eval-javascript',
 	 selector_eval_html: '.eval-html',
-   re_evaluate_all_snippets_on_change: true,
+   re_evaluate_all_snippets_on_change: false, // it makes snippet evaluation too slow
  };
 </script><link rel="stylesheet" href="slides.css"></head><body><div class="reveal"><div class="slides"><section id="local_development_environment" data-state="title"><h2>Local development environment</h2><div class="openblock centered"><div class="content"><div class="paragraph"><p><br>
 <br>
