--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,7 @@
     <section class="main-content">
       <ul>
 	      <li><a href="./introduction.html">Introduction</a></li>
+	      <li><a href="./do-things.html">Clojure syntax</a></li>
 	      <li><a href="./dev-env.html">Effective development environment</a></li>
 	      <li><a href="./debug-without-debugger.html">Debug without a debugger</a></li>
 	      <li><a href="./sequences.html">Lists, vectors and sequences</a></li>
