--- a/site/index.html
+++ b/site/index.html
@@ -28,6 +28,7 @@
         <h3> Intermediate </h3>
         <ul>
 	          <li><a href="">Unit tests</a></li>
+	          <li><a href="./component.html">Component</a></li>
 	          <li><a href="./debug-without-debugger.html">Debug without a debugger</a></li>
 	          <li><a href="./records.html">Records and protocols</a></li>
         </ul>
