--- a/site/index.html
+++ b/site/index.html
@@ -21,6 +21,7 @@
 	          <li><a href="./introduction.html">Introduction</a></li>
 	          <li><a href="./do-things.html">Do things</a></li>
 	          <li><a href="./sequences.html">Lists, vectors and sequences</a></li>
+	          <li><a href="./maps.html">Just use maps!</a></li>
 	          <li><a href="./dev-env.html">Effective development environment</a></li>
 	          <li><a href="./sets.html">Sets</a></li>
 	          <li><a href="./destructuring.html">Destructuring</a></li>
