--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Cycognito - Clojure course</h1>
+      <h1 class="project-name">HP Indigo - Clojure course</h1>
       <h2 class="project-tagline">Becoming Clojure Experts <br><br></h2>
     </section>
 
